--- a/task/buildah/0.4/buildah.yaml
+++ b/task/buildah/0.4/buildah.yaml
@@ -128,6 +128,11 @@ spec:
     description: The format for the resulting image's mediaType. Valid values are oci (default) or docker.
     type: string
     default: oci
+  - name: ADDITIONAL_BASE_IMAGES
+    description: |-
+      Additional base image references to include to the SBOM. Array of image_reference_with_digest strings
+    type: array
+    default: []
 
   results:
   - description: Digest of the image just built
@@ -683,6 +688,9 @@ spec:
       requests:
         memory: 256Mi
         cpu: 100m
+    args:
+      - --additional-base-images
+      - $(params.ADDITIONAL_BASE_IMAGES[*])
     script: |
       #!/bin/bash
       set -euo pipefail
@@ -721,8 +729,36 @@ spec:
         --parsed-dockerfile=/shared/parsed_dockerfile.json \
         --base-images-digests=/shared/base_images_digests
 
-      echo "[$(date --utc -Ins)] End prepare-sboms"
+      ADDITIONAL_BASE_IMAGES=()
+      while [[ $# -gt 0 ]]; do
+        case $1 in
+          --additional-base-images)
+            shift
+            while [[ $# -gt 0 && $1 != --* ]]
+            do
+              ADDITIONAL_BASE_IMAGES+=("$1")
+              shift
+            done
+            ;;
+          *)
+            echo "unexpected argument: $1" >&2
+            exit 2
+            ;;
+        esac
+      done
 
+      for ADDITIONAL_BASE_IMAGE in "${ADDITIONAL_BASE_IMAGES[@]}"; do
+        IFS="@" read -ra BASE_IMAGE <<< "${ADDITIONAL_BASE_IMAGE}"
+        python3 /scripts/add_image_reference.py \
+          --builder-image \
+          --image-url "${BASE_IMAGE[0]}" \
+          --image-digest "${BASE_IMAGE[1]}" \
+          --input-file sbom.json \
+          --output-file /tmp/sbom.tmp.json
+        mv /tmp/sbom.tmp.json sbom.json
+      done
+
+      echo "[$(date --utc -Ins)] End prepare-sboms"
     workingDir: $(workspaces.source.path)
     securityContext:
       runAsUser: 0
