increase cpu cores to 1 for the step app-check

--- a/task/ecosystem-cert-preflight-checks/0.2/ecosystem-cert-preflight-checks.yaml
+++ b/task/ecosystem-cert-preflight-checks/0.2/ecosystem-cert-preflight-checks.yaml
@@ -158,7 +158,7 @@ spec:
         limits:
           memory: 4Gi
         requests:
-          cpu: 100m
+          cpu: 1
           memory: 4Gi
       env:
         - name: PFLT_DOCKERCONFIG
