set cpu/memory requests for coverity-availability-check task

--- a/task/coverity-availability-check-oci-ta/0.1/coverity-availability-check-oci-ta.yaml
+++ b/task/coverity-availability-check-oci-ta/0.1/coverity-availability-check-oci-ta.yaml
@@ -109,3 +109,9 @@ spec:
         TEST_OUTPUT=$(make_result_json -r SUCCESS -s 1 -t "$note")
         echo -n "success" | tee "$(results.STATUS.path)"
         echo "${TEST_OUTPUT:-${ERROR_OUTPUT}}" | tee "$(results.TEST_OUTPUT.path)"
+      computeResources:
+        limits:
+          memory: 256Mi
+        requests:
+          cpu: 100m
+          memory: 256Mi
