maven-zip-build-oci-ta: fix a copy-paste mistake in the patch
This is a follow-up to the fix in #1884, which was incomplete.
The mistake was discovered by Kasem Alem while working on #2018.

Related: https://issues.redhat.com//browse/KONFLUX-6914

--- a/pipelines/maven-zip-build-oci-ta/maven-zip-build-oci-ta.yaml
+++ b/pipelines/maven-zip-build-oci-ta/maven-zip-build-oci-ta.yaml
@@ -218,7 +218,7 @@ spec:
     runAfter:
     - build-oci-artifact
     taskRef:
-      name: sast-shell-check-oci-ta
+      name: sast-unicode-check-oci-ta
       version: "0.1"
     when:
     - input: $(params.skip-checks)
