Add support for self-signed OCI registries to sast-unicode-check tasks
Signed-off-by: Alex Misstear <amisstea@redhat.com>

--- a/task/sast-unicode-check-oci-ta/0.1/recipe.yaml
+++ b/task/sast-unicode-check-oci-ta/0.1/recipe.yaml
@@ -10,3 +10,4 @@ replacements:
   workspaces.workspace.path: /var/workdir
 regexReplacements:
   hacbs/\$\(context.task.name\): source
+useTAVolumeMount: true
