Don't skip prefetch by default
I think it may be confusing users that if they pass `""` then the task
is skipped (which may cause conforma to fail with "no skipped tasks"),
even when they have no _real_ content that they want to prefetch, say
for a data container like a bundle or something that just contains basic
shell scripts.

With this, the prefetch task will run, but with the input of `""`, it
will exit early with exit code 0.

--- a/task/prefetch-dependencies/0.2/prefetch-dependencies.yaml
+++ b/task/prefetch-dependencies/0.2/prefetch-dependencies.yaml
@@ -226,7 +226,7 @@ spec:
       }
 
       if [ -z "${INPUT}" ]; then
-        # Confirm input was provided though it's likely the whole task would be skipped if it wasn't
+        # Confirm input was provided
         echo "No prefetch will be performed because no input was provided for cachi2 fetch-deps"
         exit 0
       fi
