--- a/task/sast-coverity-check-oci-ta/0.3/sast-coverity-check-oci-ta.yaml
+++ b/task/sast-coverity-check-oci-ta/0.3/sast-coverity-check-oci-ta.yaml
@@ -160,7 +160,7 @@ spec:
     - name: STORAGE_DRIVER
       description: Storage driver to configure for buildah
       type: string
-      default: vfs
+      default: overlay
     - name: TARGET_STAGE
       description: Target stage in Dockerfile to build. If not specified,
         the Dockerfile is processed entirely to (and including) its last stage.
@@ -601,7 +601,7 @@ spec:
           UNSHARE_ARGS+=("--net")
 
           for image in $BASE_IMAGES; do
-            unshare -Ufp --keep-caps -r --map-users 1,1,65536 --map-groups 1,1,65536 -- buildah pull "$image"
+            unshare -Ufp --keep-caps -r --map-users 1,1,65536 --map-groups 1,1,65536 --mount -- buildah pull "$image"
           done
           echo "Build will be executed with network isolation"
         fi
@@ -771,22 +771,15 @@ spec:
         echo "[$(date --utc -Ins)] Run buildah build"
         echo "[$(date --utc -Ins)] ${command}"
 
-        unshare -Uf "${UNSHARE_ARGS[@]}" --keep-caps -r --map-users 1,1,65536 --map-groups 1,1,65536 -w "${SOURCE_CODE_DIR}/$CONTEXT" -- sh -c "$command"
+        unshare -Uf "${UNSHARE_ARGS[@]}" --keep-caps -r --map-users 1,1,65536 --map-groups 1,1,65536 -w "${SOURCE_CODE_DIR}/$CONTEXT" --mount -- sh -c "$command"
 
         echo "[$(date --utc -Ins)] Add metadata"
-
-        container=$(buildah from --pull-never "$IMAGE")
 
         # Save the SBOM produced by Cachi2 so it can be merged into the final SBOM later
         if [ -f "/tmp/cachi2/output/bom.json" ]; then
           echo "Making copy of sbom-cachi2.json"
           cp /tmp/cachi2/output/bom.json ./sbom-cachi2.json
         fi
-
-        buildah mount "$container" | tee /shared/container_path
-        # delete symlinks - they may point outside the container rootfs, messing with SBOM scanners
-        find $(cat /shared/container_path) -xtype l -delete
-        echo $container >/shared/container_name
 
         touch /shared/base_images_digests
         echo "Recording base image digests used"
@@ -798,6 +791,10 @@ spec:
             echo "$image $base_image_digest" | tee -a /shared/base_images_digests
           fi
         done
+
+        image_name=$(echo "${IMAGE##*/}" | tr ':' '-')
+        buildah push "$IMAGE" oci-archive:"/shared/$image_name.tar"
+        echo "/shared/$image_name.tar" >/shared/container_path
 
         echo "[$(date --utc -Ins)] End build"
       computeResources:
