--- a/task/tkn-bundle/0.1/tkn-bundle.yaml
+++ b/task/tkn-bundle/0.1/tkn-bundle.yaml
@@ -53,7 +53,7 @@ spec:
       set -o errexit
       set -o pipefail
       set -o nounset
-
+      # comment
       # expand '**', and don't return glob expression when no matches found
       shopt -s globstar nullglob
 
