--- a/task/prefetch-dependencies/0.2/prefetch-dependencies.yaml
+++ b/task/prefetch-dependencies/0.2/prefetch-dependencies.yaml
@@ -302,6 +302,13 @@ spec:
 
       INPUT=$(inject_rpm_summary_flag "$INPUT")
 
+      # Some repos with go submodules would fail during prefetch dependencies task
+      # Forcing fetching tags serves as a workaround
+      if [[ "$(cd "$(workspaces.source.path)/source" && ! git fetch --tags)" ]]; then
+        echo "Retrying fetch command..."
+        "$(cd "$(workspaces.source.path)/source" && git fetch --tags)"
+      fi
+
       cachi2 --log-level="$LOG_LEVEL" $config_flag fetch-deps \
       $dev_pacman_flag \
       --source=$(workspaces.source.path)/source \
