test pipeline - do not merge
Signed-off-by: Avi Biton <abiton@redhat.com>

--- a/task/clair-scan/0.2/clair-scan.yaml
+++ b/task/clair-scan/0.2/clair-scan.yaml
@@ -65,7 +65,7 @@ spec:
         #!/usr/bin/env bash
         set -euo pipefail
         . /utils.sh
-
+        # comment
         imagewithouttag=$(echo -n $IMAGE_URL | sed "s/\(.*\):.*/\1/")
         # strip new-line escape symbol from parameter and save it to variable
         imageanddigest=$(echo $imagewithouttag@$IMAGE_DIGEST)
