--- a/task/sast-coverity-check-oci-ta/0.2/recipe.yaml
+++ b/task/sast-coverity-check-oci-ta/0.2/recipe.yaml
@@ -11,3 +11,4 @@ replacements:
   workspaces.source.path: /var/workdir
 regexReplacements:
   "/workspace(/.*)": /var/workdir$1
+useTAVolumeMount: true
