--- a/renovate.json
+++ b/renovate.json
@@ -95,7 +95,9 @@
         "task/fips-operator-bundle-check-oci-ta/**",
         "task/fips-operator-bundle-check/**",
         "task/inspect-image/**",
+        "task/sast-coverity-check-build/**",
         "task/sast-coverity-check-oci-ta/**",
+        "task/sast-coverity-check-upload/**",
         "task/sast-coverity-check/**",
         "task/sast-shell-check-oci-ta/**",
         "task/sast-shell-check/**",
