renovate: prefetch task into separate group
Signed-off-by: Martin Basti <mbasti@redhat.com>

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -33,7 +33,7 @@
 /task/update-infra-deployments              @konflux-ci/build-maintainers
 /task/upload-sbom-to-trustification         @konflux-ci/build-maintainers
 
-# renovate groupName=build
+# renovate groupName=build-prefetch
 /task/prefetch-dependencies         @konflux-ci/build-maintainers @brunoapimentel @eskultety @taylormadore
 /task/prefetch-dependencies-oci-ta  @konflux-ci/build-maintainers @brunoapimentel @eskultety @taylormadore
 
