--- a/renovate.json
+++ b/renovate.json
@@ -53,8 +53,6 @@
         "task/git-clone/**",
         "task/init/**",
         "task/pnc-prebuild-git-clone-oci-ta/**",
-        "task/prefetch-dependencies-oci-ta/**",
-        "task/prefetch-dependencies/**",
         "task/push-dockerfile-oci-ta/**",
         "task/push-dockerfile/**",
         "task/show-sbom-rhdh/**",
@@ -66,6 +64,13 @@
         "task/update-deployment/**",
         "task/update-infra-deployments/**",
         "task/upload-sbom-to-trustification/**"
+      ]
+    },
+    {
+      "groupName": "build-prefetch",
+      "matchFileNames": [
+        "task/prefetch-dependencies-oci-ta/**",
+        "task/prefetch-dependencies/**"
       ]
     },
     {
