sast-coverity-check: hook the new subtasks
... in the default build pipeline

Related: https://issues.redhat.com/browse/PSSECAUT-1032

--- a/pipelines/docker-build-oci-ta/patch.yaml
+++ b/pipelines/docker-build-oci-ta/patch.yaml
@@ -30,12 +30,14 @@
 #   8  ecosystem-cert-preflight-checks
 #   9  sast-snyk-check
 #  10  clamav-scan
-#  11  sast-coverity-check
-#  12  coverity-availability-check
-#  13  sast-shell-check
-#  14  sast-unicode-check
-#  15  apply-tags
-#  16  push-dockerfile
+#  11  coverity-availability-check
+#  12  sast-coverity-check-build
+#  13  sast-coverity-check
+#  14  sast-coverity-check-upload
+#  15  sast-shell-check
+#  16  sast-unicode-check
+#  17  apply-tags
+#  18  push-dockerfile
 
 # clone-repository Task
 - op: replace
@@ -134,77 +136,94 @@
 - op: remove
   path: /spec/tasks/9/workspaces/0
 
-# sast-coverity-check
+# sast-coverity-check-build
 - op: test
-  path: /spec/tasks/11/taskRef/name
-  value: sast-coverity-check
+  path: /spec/tasks/12/taskRef/name
+  value: sast-coverity-check-build
 - op: replace
-  path: /spec/tasks/11/taskRef/name
-  value: sast-coverity-check-oci-ta
+  path: /spec/tasks/12/taskRef/name
+  value: sast-coverity-check-build-oci-ta
 - op: add
-  path: /spec/tasks/11/params/-
+  path: /spec/tasks/12/params/-
   value:
     name: SOURCE_ARTIFACT
     value: $(tasks.prefetch-dependencies.results.SOURCE_ARTIFACT)
 - op: add
-  path: /spec/tasks/11/params/-
+  path: /spec/tasks/12/params/-
   value:
     name: CACHI2_ARTIFACT
     value: $(tasks.prefetch-dependencies.results.CACHI2_ARTIFACT)
 - op: remove
-  path: /spec/tasks/11/workspaces/0
+  path: /spec/tasks/12/workspaces/0
 
-# sast-shell-check
+# sast-coverity-check
 - op: test
   path: /spec/tasks/13/taskRef/name
-  value: sast-shell-check
+  value: sast-coverity-check
 - op: replace
   path: /spec/tasks/13/taskRef/name
-  value: sast-shell-check-oci-ta
+  value: sast-coverity-check-oci-ta
 - op: add
-  path: /spec/tasks/13/params/-
+  path: /spec/tasks/13/params
   value:
-    name: SOURCE_ARTIFACT
+  - name: SOURCE_ARTIFACT
     value: $(tasks.prefetch-dependencies.results.SOURCE_ARTIFACT)
-- op: add
-  path: /spec/tasks/13/params/-
-  value:
-    name: CACHI2_ARTIFACT
+  - name: CACHI2_ARTIFACT
     value: $(tasks.prefetch-dependencies.results.CACHI2_ARTIFACT)
 - op: remove
   path: /spec/tasks/13/workspaces/0
 
-# sast-unicode-check
+# sast-shell-check
 - op: test
-  path: /spec/tasks/14/taskRef/name
-  value: sast-unicode-check
+  path: /spec/tasks/15/taskRef/name
+  value: sast-shell-check
 - op: replace
-  path: /spec/tasks/14/taskRef/name
-  value: sast-unicode-check-oci-ta
+  path: /spec/tasks/15/taskRef/name
+  value: sast-shell-check-oci-ta
 - op: add
-  path: /spec/tasks/14/params/-
+  path: /spec/tasks/15/params/-
   value:
     name: SOURCE_ARTIFACT
     value: $(tasks.prefetch-dependencies.results.SOURCE_ARTIFACT)
 - op: add
-  path: /spec/tasks/14/params/-
+  path: /spec/tasks/15/params/-
   value:
     name: CACHI2_ARTIFACT
     value: $(tasks.prefetch-dependencies.results.CACHI2_ARTIFACT)
 - op: remove
-  path: /spec/tasks/14/workspaces/0
+  path: /spec/tasks/15/workspaces/0
 
-# push-dockerfile
+# sast-unicode-check
+- op: test
+  path: /spec/tasks/16/taskRef/name
+  value: sast-unicode-check
 - op: replace
   path: /spec/tasks/16/taskRef/name
-  value: push-dockerfile-oci-ta
+  value: sast-unicode-check-oci-ta
 - op: add
   path: /spec/tasks/16/params/-
   value:
     name: SOURCE_ARTIFACT
     value: $(tasks.prefetch-dependencies.results.SOURCE_ARTIFACT)
+- op: add
+  path: /spec/tasks/16/params/-
+  value:
+    name: CACHI2_ARTIFACT
+    value: $(tasks.prefetch-dependencies.results.CACHI2_ARTIFACT)
 - op: remove
   path: /spec/tasks/16/workspaces/0
+
+# push-dockerfile
+- op: replace
+  path: /spec/tasks/18/taskRef/name
+  value: push-dockerfile-oci-ta
+- op: add
+  path: /spec/tasks/18/params/-
+  value:
+    name: SOURCE_ARTIFACT
+    value: $(tasks.prefetch-dependencies.results.SOURCE_ARTIFACT)
+- op: remove
+  path: /spec/tasks/18/workspaces/0
 
 # Order of finally Tasks from the base docker-build Pipeline:
 # $ kustomize build pipelines/docker-build | yq .spec.finally.[].name | nl -v 0
